[package]
name = "hydro_cli_app"
version = "0.1.0"
edition = "2021"

[dependencies]
hydro_deploy = { version = "0.13.0" }
hydro_lang = { version = "0.13.2", features = ["deploy"] }
tokio = { version = "1.29.0", features = ["full"] }
anyhow = "1.0.82"
futures = "0.3.30"
worker = { path = "./worker" }
dfir_rs = { version = "0.13.0", features = ["deploy_integration"] }
serde_json = "1.0.115"
hydro_deploy_integration = { version = "0.13.0" }

